--- a/client/.gitignore
+++ b/client/.gitignore
@@ -2,9 +2,11 @@
 
 # dependencies
 /node_modules
+node_modules
 /.pnp
 .pnp.js
 /client/node_modules
+/portfolio/node_modules
 
 # testing
 /coverage
